backend/src/main/java/boopited/example/graphql/error/CustomException.java
package boopited.example.graphql.error;

public class CustomException extends Exception {

    public CustomException(String message) {
        super(message);
    }
}
